[gd_scene load_steps=22 format=3 uid="uid://bochpsoi1xhxm"]

[ext_resource type="Script" uid="uid://1ypqd8c7hah3" path="res://Scripts/enemy_robot2.gd" id="1_m4iiy"]
[ext_resource type="Texture2D" uid="uid://byi62drl0vjcq" path="res://Sprites/robot 2 idle.png" id="2_76gyl"]
[ext_resource type="Texture2D" uid="uid://chqk0v7q7qbav" path="res://Sprites/robot 2 shoot.png" id="3_1vd66"]
[ext_resource type="Texture2D" uid="uid://bdu31bphhcnjv" path="res://Sprites/robot 2 walk.png" id="4_t7d7l"]
[ext_resource type="Texture2D" uid="uid://depm702hxsrt2" path="res://Sprites/light.png" id="5_76gyl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_76gyl"]
radius = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_h7g77"]
atlas = ExtResource("2_76gyl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh4b5"]
atlas = ExtResource("2_76gyl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_40kq4"]
atlas = ExtResource("3_1vd66")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6qib"]
atlas = ExtResource("3_1vd66")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmt7w"]
atlas = ExtResource("3_1vd66")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vdx2"]
atlas = ExtResource("3_1vd66")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf1gu"]
atlas = ExtResource("4_t7d7l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys6b2"]
atlas = ExtResource("4_t7d7l")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4udhj"]
atlas = ExtResource("4_t7d7l")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ky13"]
atlas = ExtResource("4_t7d7l")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnacg"]
atlas = ExtResource("4_t7d7l")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3q7bq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7g77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh4b5")
}],
"loop": true,
"name": &"robot 2 idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40kq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6qib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmt7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vdx2")
}],
"loop": true,
"name": &"robot 2 shot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf1gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys6b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4udhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ky13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnacg")
}],
"loop": true,
"name": &"robot 2 walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vd66"]
size = Vector2(32, 34)

[sub_resource type="CircleShape2D" id="CircleShape2D_1vd66"]
radius = 193.494

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_76gyl"]
properties/0/path = NodePath(".:health")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:damagecount")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:move_speed")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:direction")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:color")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:is_invincible")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:invincibility_time")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("AnimatedSprite2D:animation")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("AnimatedSprite2D:frame")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("PointLight2D:color")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath(".:visible")
properties/10/spawn = true
properties/10/replication_mode = 1
properties/11/path = NodePath("bulletpos:position")
properties/11/spawn = true
properties/11/replication_mode = 1
properties/12/path = NodePath("bulletpos:rotation")
properties/12/spawn = true
properties/12/replication_mode = 1
properties/13/path = NodePath("bulletpos/bulletspawn:position")
properties/13/spawn = true
properties/13/replication_mode = 1
properties/14/path = NodePath("bulletpos/bulletspawn:rotation")
properties/14/spawn = true
properties/14/replication_mode = 1
properties/15/path = NodePath(".:position")
properties/15/spawn = true
properties/15/replication_mode = 1
properties/16/path = NodePath(".:rotation")
properties/16/spawn = true
properties/16/replication_mode = 1
properties/17/path = NodePath(".:scale")
properties/17/spawn = true
properties/17/replication_mode = 1
properties/18/path = NodePath("AnimatedSprite2D:flip_h")
properties/18/spawn = true
properties/18/replication_mode = 1

[node name="enemy_robot_2" type="CharacterBody2D" groups=["Persistent", "enemy"]]
script = ExtResource("1_m4iiy")
color = Color(0, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_76gyl")

[node name="bulletpos" type="Node2D" parent="."]

[node name="bulletspawn" type="Marker2D" parent="bulletpos"]
position = Vector2(40, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_3q7bq")
animation = &"robot 2 shot"
frame_progress = 0.666653
flip_h = true

[node name="Timer" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0, 1, 0, 1)
range_layer_min = -100
shadow_enabled = true
texture = ExtResource("5_76gyl")
texture_scale = 0.5

[node name="left_floor" type="RayCast2D" parent="."]
position = Vector2(-16, 5.33333)
target_position = Vector2(0, 21.3333)

[node name="left_wall" type="RayCast2D" parent="."]
position = Vector2(-21.3333, 0)
target_position = Vector2(-26.6667, 0)

[node name="right_wall" type="RayCast2D" parent="."]
position = Vector2(16, 0)
rotation = 3.14159
target_position = Vector2(-26.6667, 0)

[node name="right_floor" type="RayCast2D" parent="."]
position = Vector2(10.6667, 5.33333)
target_position = Vector2(0, 21.3333)

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(3.8147e-06, -3.8147e-06)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_1vd66")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1vd66")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_76gyl")

[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
